frontend/public/css/style.css
* {
	padding: 0;
	margin: 0;
	box-sizing: border-box;
}

body {
	background-color: rgb(2, 95, 95);
}

h1 {
	text-align: center;
	color: aliceblue;
	font-size: 4rem;
	padding: 5rem;
}

.card-container {
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	justify-content: center;
}

.card {
	background-color: rgb(1, 50, 50);
	width: 28vw;
	padding: 20px;
	border-radius: 10px;
	color: aliceblue;
	border: 1px rgb(0, 0, 0) solid;
	margin: 1rem;
	overflow-wrap: break-word;
}

.img_n_name {
	display: flex;
	align-items: center;
	justify-content: space-evenly;
	text-align: center;
	background-color: rgb(1, 29, 29);
	padding: 10px;
	border-radius: 2px;
	box-shadow: 0 0 10px rgb(3, 130, 130);
	margin: 0.4rem;
}

p {
	padding: 0.4rem;
}

.card:hover {
	transform: scale(1.05);
	border: 1px solid cyan;
	box-shadow: 0 0 20px rgb(3, 130, 130);
	transition: all 0.3s ease-in-out;
}

@media screen and (max-width: 1024px) {
	.card {
		width: 40vw;
	}
}

@media screen and (max-width: 640px) {
	.card {
		width: 90vw;
	}
}

